--- a/index.html
+++ b/index.html
@@ -9,7 +9,41 @@
   </head>
 
   <body>
-    <img src="/Thumbnails/Austin Headshot.jpg" alt="Austin Johnk's headshot">
+
+    <div class="banner">
+      <img src="/Thumbnails/Austin Headshot.jpg" alt="Austin Johnk's headshot">
+    </div>
+
+    <div class="name">
+      Austin Johnk
+    </div>
+
+    <div class="social-icons">
+      <a href="https://github.com/austinj33" target="_blank">
+        GitHub
+      </a>
+
+      <a href="https://www.linkedin.com/in/austin-johnk/" target="_blank">
+        LinkedIn
+      </a>
+
+    </div>
+
+    <div class="link">
+      <img
+        src="/Thumbnails/asymmetry1">
+
+      <a target="_blank" href="https://www.oaktreecapital.com/insights/memo/fewer-losers-or-more-winners">Fewer losers or more winners
+        - Howard Marks</a>
+    </div>
+
+    <div class="link">
+      <img src="/thumbnails/ThinApplications.png">
+
+      <a target="_blank"
+        href="https://www.placeholder.vc/blog/2020/1/30/thin-applications">Thin applications — Joel Monegro</a>
+    </div>
+
   </body>
 
 </html>
