added first style elements

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <title> Austin J</title>
     <meta charset="utf-8">
     <meta name="author" content ="Austin Johnk">
+    <style>
+        body {
+          padding-top: 40px;
+          padding-bottom: 40px;
+        }
+    </style>
 
   </head>
 
   <body>
 
     <div class="banner">
-      <img src="/Thumbnails/Austin Headshot.jpg" alt="Austin Johnk's headshot">
+      <img src="/Thumbnails/Austin Headshot.jpg" alt="Austin Johnk's headshot" class = "banner-image">
     </div>
+    
+    <style>
+      .banner-image {
+        width: 128px;
+        height: 128px;
+      }
+    </style>
 
     <div class="name">
       Austin Johnk
@@ -31,14 +44,14 @@
 
     <div class="link">
       <img
-        src="/Thumbnails/asymmetry1">
+        src="/Thumbnails/asymmetry1" alt ="Chart showing risk and return spectrum">
 
       <a target="_blank" href="https://www.oaktreecapital.com/insights/memo/fewer-losers-or-more-winners">Fewer losers or more winners
         - Howard Marks</a>
     </div>
 
     <div class="link">
-      <img src="/thumbnails/ThinApplications.png">
+      <img src="/thumbnails/ThinApplications.png" alt = "Chart showing Blockchain based application vs traditional.">
 
       <a target="_blank"
         href="https://www.placeholder.vc/blog/2020/1/30/thin-applications">Thin applications — Joel Monegro</a>
